@@ -7,6 +7,7 @@
 * Supports OpenGraph
 * Drop Gallery Remote support
 * Support Travis CI and PSR code quality standards
+* Improve support for unicode utf-8 file names
 
 2.6.6  William Entriken <cameralife AT phor.net>
 * Improve install process
